# react-native-gdk

./: .eslintrc  .gitignore  .npmignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  package-lock.json  package.json  react-native-gdk.podspec  tsconfig.json  turbo.json
.github/workflows/: ci.yml  publish.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/blockstream/libgreen_gdk/: GDKJNI.java
android/src/main/java/com/blockstream/libgreenaddress/: GDKJNI.java
android/src/main/java/com/gdk/: GdkModule.java  GdkPackage.java
cpp/: GdkHostObject.cpp  GdkHostObject.hpp  ThreadPool.cpp  ThreadPool.hpp  TwoFactorCall.cpp  TwoFactorCall.hpp  json.cpp  json.hpp  react-native-gdk.cpp  react-native-gdk.h  utils.cpp  utils.hpp
docs/: about_gdk.md  about_jsi.md  update_gdk.md
example/: app.json  babel.config.js  jest.config.js  metro.config.js  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/gdkexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/GdkExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/GdkExample.xcodeproj/: project.pbxproj
example/ios/GdkExample.xcodeproj/xcshareddata/xcschemes/: GdkExample.xcscheme
example/ios/GdkExample.xcworkspace/: contents.xcworkspacedata
example/ios/GdkExampleTests/: GdkExampleTests.m
example/src/: App.tsx
ios/: Gdk.h  Gdk.mm  NativeGdk.h  NativeGdk.mm
npm_scripts/: android_gdk.sh  ios_gdk.sh
src/: GdkNativeInterface.ts  NativeGdk.ts  createGdk.ts  index.ts  index.tsx  types.ts
